syntax = "proto3";

package event;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/flaneur4dev/good-tasks/hw12_13_14_15_calendar/internal/server/grpc/pb";

service Calendar {
  rpc Events (EventsRequest) returns (EventsResponse) {}
  rpc CreateEvent (Event) returns (EventResponse) {}
  rpc UpdateEvent (Event) returns (EventResponse) {}
  rpc DeleteEvent (DeleteRequest) returns (EventResponse) {}
}

message EventsRequest {
  google.protobuf.Timestamp date = 1;
  string period = 2;
}

message DeleteRequest {
  string id = 1;
}

message EventsResponse {
  repeated Event events = 1;
}

message EventResponse {
  string id = 1;
  string message = 2;
}

message Event {
  string id = 1;
  string title = 2;
  string description = 3;
  string owner_id = 4;
  google.protobuf.Timestamp start_date = 5;
  google.protobuf.Timestamp finish_date = 6;
  google.protobuf.Timestamp notification_time = 7;
}
